--- a/WebContent/pages/user/order_upload.html
+++ b/WebContent/pages/user/order_upload.html
@@ -14,7 +14,7 @@
 <script src="../../js/common.js?v=2020-02-14"></script>
 <script src="../../js/layer/layer.js"></script>
 <script src="../../js/webuploader.js?v=2020-02-14"></script>
-<script src="../../js/user/order_upload.js?v=2020-02-14"></script>
+<script src="../../js/user/order_upload.js?v=2020-02-1"></script>
 
 
 </head>
@@ -127,7 +127,7 @@ progress {
 					</div>
 					<br />
 					<div id="picker_btn">选择文件</div>
-
+					<div id="console"></div>
 				</div>
 			</div>
 		</div>
