--- a/WebContent/index_et.html
+++ b/WebContent/index_et.html
@@ -18,14 +18,24 @@
     <style type="text/css">
     	#indexProD .w {
 		    /* display: flex; */
-		    justify-content: space-between;
-		    flex-wrap: wrap;
+		    /* justify-content: space-between; */
+		    /* flex-wrap: wrap; */
 		}
     	#indexProD .d2 {
-		    display: flex;
+            display: -webkit-box;
+            display: -moz-box;
+            display: -webkit-flex;
+            display: -moz-flex;
+            display: -ms-flexbox;  
+            display: flex;
 		    border-left: none;
-		    justify-content: space-between;
-		    flex-wrap: wrap;
+            justify-content: space-between;
+            -webkit-flex-wrap: wrap;
+            -moz-flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
+            -o-flex-wrap: wrap;
+            flex-wrap: wrap;
+            flex: 1;
 		}
     	#indexProD h2 .tit {
 		    color: #313131;
