--- a/WebContent/pages/com/footer.html
+++ b/WebContent/pages/com/footer.html
@@ -1,6 +1,116 @@
-<div>我的相册（北京）科技有限公司版权所有</div>
-<div>
-    <span class="s1">Copyright © 2006-2018 WWW.WODEXIANGCE.CN All Rights Reserved.</span>
-    <span class="s1">京ICP备14002234号 京ICP证060202号</span>
-    <span class="s1">京公网安备 11010802020251号  营业执照</span>
-</div>
+
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">  
+	<META HTTP-EQUIV="Expires" CONTENT="-1">  
+	<div>
+		<span class="s1"><a style="color: #a9a9a9" href="/pages/introduce/order_create.html" target="_blank">如何下单</a></span>
+		<span class="s1"><a style="color: #a9a9a9" href="/pages/introduce/zhaoshao.html" target="_blank">产品招商</a></span>
+		<span class="s1"><a style="color: #a9a9a9" href="/pages/workshop/reg_index.html" target="_blank">厂家入驻</a></span>
+		<span class="s1"><a style="color: #a9a9a9" href="/pages/introduce/about_us.html" target="_blank">关于我们</a></span>
+		<span class="s1"><a style="color: #a9a9a9" href="/pages/introduce/contact_us.html" target="_blank">联系我们</a></span>
+		<span class="s1"><a style="color: #a9a9a9" href="/pages/introduce/after_sales.html" target="_blank">售后承诺</a></span>
+	</div>
+	<div>
+		<span class="s1">我的相册（北京）科技有限公司版权所有</span>
+		<span class="s1">地址：北京市丰台区万丰路万开中心B座116室</span>
+	</div>
+	<div>
+		<span class="s1">Copyright © 2018-2028 www.yl123.cn All Rights Reserved.</span>
+		<span class="s1">京ICP备14002234号 京ICP证060202号</span>
+		<span class="s1">京公网安备 11010802020251号  <a style="color: #a9a9a9" href="/images/index/License.jpg">营业执照</a></span>
+	</div>
+	
+	
+	<!-- <div class="side-bar" id="side-bar"> 
+		<a href="#" id="53kf" class="icon-qq"  onclick="window.open('https://tb.53kf.com/code/client/ffe9250fc01b27c48a8724fe636f47bf8/1?u_cust_id=996&u_cust_name=影楼网游客&u_custom_info=影楼网',
+				'','height=499,width=712,top=250,left=500,toolbar=no,menubar=yes,scrollbars=yes,resizable=yes,location=no,status=no')">
+			在线客服
+		</a>
+		
+			<div class="chat-tips" style="height: 240px;"><i></i>
+					<p style="font-size: 14px;font-weight:bolder;color: #434854">常见问题</p>
+					&gt;<p onclick="javascript:location.href='/pages/introduce/order_create.html'" style="font-size: 12px;color: #2184e9">如何下单购买？</p>
+					&gt;<p onclick="javascript:location.href='/pages/introduce/order_create.html'" style="font-size: 12px;color: #2184e9">如何上传文件，文件打包格式要求？</p>
+					<br/>
+					<p style="font-size: 14px;font-weight:bolder;color: #434854">客服1号</p>
+					<br/>
+					<p style="font-size: 18px;color: #000000"> QQ:1448842850</p>
+					<br/>
+					<p style="font-size: 14px;font-weight:bolder;color: #434854">客服2号</p>
+					<br/>
+					<p style="font-size: 18px;color: #000000"> QQ:1578886380</p>
+					<br/>
+					<p style="font-size: 13px;color: #434854">在线时间（早9:30至晚18:00)</p>
+			</div>
+		</a> 
+		<a href="javascript:void(0)" class="icon-chat">业务电话
+			<div class="chat-tips" style="height: 260px;line-height: 32px;"><i></i>
+				<p style="font-size: 14px;font-weight: bolder;color: #434854">陈经理:</p>
+				<p style="font-size: 18px;color: #000000">13811120296</p>
+				<p style="font-size: 14px;font-weight: bolder;color: #434854">王经理:</p>
+				<p style="font-size: 18px;color: #000000">18601043955</p>
+				<p style="font-size: 14px;font-weight: bolder;color: #434854">沈经理:</p>
+				<p style="font-size: 18px;color: #000000">15831783228</p>
+				
+			</div>
+		</a> 
+		<a href="javascript:void(0)" class="icon-blog">售后电话
+			<div class="chat-tips"><i></i>
+				<p style="font-size: 14px;font-weight: bolder;color: #434854">售后电话:</p>
+				<br/>
+				<p style="font-size: 18px;color: #000000">18301319283</p>
+			</div>
+		</a>
+		<a href="javascript:void(0)" class="icon-totop">返回
+		</a> 
+	</div> -->
+	
+	<script>
+	//var _53kf = document.getElementById("53kf");
+	//console.log("localUser",localUser);
+	var url = "https://tb.53kf.com/code/code/ffe9250fc01b27c48a8724fe636f47bf8/1?u_cust_id=999&u_cust_name=游客用户&u_custom_info=影楼网";
+	if("undefined" != localUser && undefined != localUser){
+		url = "https://tb.53kf.com/code/code/ffe9250fc01b27c48a8724fe636f47bf8/1?u_cust_id="+localUser.id+"&u_cust_name="+localUser.orderCount+"_"+localUser.id+"_"+localUser.companyName+"&u_custom_info=影楼网";
+		/* var eventMethod = "window.open('"+url+"','','height=499,width=712,top=250,left=500,toolbar=no,menubar=yes,scrollbars=yes,resizable=yes,location=no,status=no')";
+		_53kf.setAttribute("onclick",eventMethod);  */
+	}
+	
+	var code = "(function() {var _53code = document.createElement(\"script\");"+
+	"_53code.src = \""+url+"\";"+
+	"var s = document.getElementsByTagName(\"script\")[0]; s.parentNode.insertBefore(_53code, s);})();";
+	
+	loadScriptString(code);
+	
+	function loadScriptString(code) {
+		var script = document.createElement("script");
+		script.type = "text/javascript";
+		try {
+			script.appendChild(document.createTextNode(code));
+		} catch (ex) {
+			script.text = code;
+		}
+		document.body.appendChild(script);
+	}
+	
+	
+	/* var divSlider = document.getElementById("side-bar");
+	divSlider.addEventListener('mousedown', mouseDown, false);
+	document.addEventListener('mouseup', mouseUp, false);
+	function mouseDown() {
+		document.addEventListener('mousemove', sliderMove, false);
+	}
+	function mouseUp() {
+		document.removeEventListener('mousemove', sliderMove, false);
+	}
+	function sliderMove(e) {
+		// 解决拖拽鼠标粘滞的问题
+		// if (e.preventDefault) {
+		//     e.preventDefault();
+		// } else {
+		//     e.returnValue = false;
+		// }
+		divSlider.style.left = (e.clientX-30) + 'px';
+		divSlider.style.top = (e.clientY-30) + 'px';
+	} */
+	
+	
+	</script>
